--- a/blog/_posts/2013-09-04-p2p-rooms.md
+++ b/blog/_posts/2013-09-04-p2p-rooms.md
@@ -8,11 +8,11 @@ We have developed a very cool feature in Licode. Now you can use peer – to –
 An initial version is implemented in Licode’s “cleanup” branch (by the moment it only works between peers using the same browser, we are developing the interoperability Chrome - Firefox). And use it is very easy! You only need to create a p2p room using Nuve API like this:
 
 
-*var roomName = 'myP2PRoom';*
+	var roomName = 'myP2PRoom';*
 
-*N.API.createRoom(roomName, function(room) {*
-	*console.log('P2P room created with id: ', room._id);*
-*}, errorCallback, **{p2p: true}**);*
+	N.API.createRoom(roomName, function(room) {
+		console.log('P2P room created with id: ', room._id);
+	}, errorCallback, **{p2p: true}**);
 
 
 And from here use the room with the client API as always!
