--- a/blog/_posts/2013-09-04-p2p-rooms.md
+++ b/blog/_posts/2013-09-04-p2p-rooms.md
@@ -12,7 +12,7 @@ An initial version is implemented in Licode’s “cleanup” branch (by the mom
 
 	N.API.createRoom(roomName, function(room) {
 		console.log('P2P room created with id: ', room._id);
-	}, errorCallback, **{p2p: true}**);
+	}, errorCallback, {p2p: true});
 
 
 And from here use the room with the client API as always!
