--- a/blog/_posts/2014-08-07-roles.md
+++ b/blog/_posts/2014-08-07-roles.md
@@ -15,10 +15,10 @@ Below you can find a list of the current permissions:
 These permissions are fixed in the source code, we can not create new ones without changing the code. But we can create roles from them. For example, if we aim to create e-learning applications we could create a role for the teacher, who should be able to publish, subscribe and even record the stream. On the other hand, the student could only subscribe to other streams. In this case our application would have both roles. In this case we should configure our Licode's installation with the next line:
 
 ```javascript
-~~config.roles = {~~
-  ~~"teacher":["publish", "subscribe", "record"],~~
-  ~~"student":["subscribe"]~~
-~~};~~
+config.roles = {
+  "teacher":["publish", "subscribe", "record"],
+  "student":["subscribe"]
+};
 ```
 
 Important update: the new format to specify roles is: 
